force-app/main/default/objects/Lead/fields/Mobile_Country__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country__c</fullName>
    <label>Mobile Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mobile_Country</valueSetName>
    </valueSet>
</CustomField>